Corrected issue with sizing on mobile in css

--- a/oldFrontend/css/login.css
+++ b/oldFrontend/css/login.css
@@ -15,3 +15,23 @@
 p {
     text-align: center;
 }
+
+@media only screen and (max-width: 900px) {
+    .container {
+        max-width: 80%;
+        margin-top: 25%;
+     }
+     
+     .btn {
+         text-align: center;
+         width: 100%;
+     }
+     
+     .header {
+         text-align: center;
+     }
+     
+     p {
+         text-align: center;
+     }
+}
